# cricket-wizard

./: .gitignore  README.md  main.py  pyproject.toml  scrape.py  start.sh  start_cli.sh  start_http.sh
apps/: __init__.py  cli.py
cricket_wizard/: agent.py
