[tool.poetry]
name = "cricket-wizard"
version = "0.1.0"
description = ""
authors = ["Aneesh Anil <aneeshanil008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
openai = "^1.57.4"
playwright = "^1.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
